--- a/css/invites.css
+++ b/css/invites.css
@@ -716,7 +716,7 @@
 
 
     .scroll_down {
-        bottom: 0px;
+        bottom: 14px;
 
     }
 
@@ -931,9 +931,9 @@
 
 @media (max-width: 540px) {
 
-
     .main_tech {
         border-radius: 0 0 0 0;
+
     }
 
 
@@ -983,7 +983,7 @@
     }
 
     .main_tech .txt {
-        text-align: right;
+        text-align: center;
     }
 
     .main_tech .st_right h3 {
@@ -1000,8 +1000,12 @@
 
     .main_tech .st_right .tag_wrap {
         margin-bottom: 50px;
+
     }
 
+    .main_tech .st_right .tag_wrap a {
+        padding: 15px 15px;
+    }
 
 
 }
