--- a/css/invites.css
+++ b/css/invites.css
@@ -1434,7 +1434,7 @@
 .footer .ft_con {
     display: flex;
     justify-content: space-between;
-    padding: 30px 0;
+    padding: 30px 15px;
 }
 
 .footer .ft_con .img_box img {
